RavenDB-20251 Fix jumpy UI in cluster dashboard view

--- a/src/Raven.Studio/wwwroot/Content/css/pages/cluster-dashboard.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/cluster-dashboard.less
@@ -96,6 +96,9 @@
 
         &.fullscreen {
             width: 100%;
+            .nodes-item {
+                flex-basis: 25%;
+            }
 
             @media (min-width: 1920px) {
                 width: calc(66.6% - (@gutter-sm * 1/3));
@@ -299,11 +302,10 @@
                     transform-origin: left top;
                     padding: @gutter-xs/2 @gutter-sm/2;
                     color: @text-muted;
-                    flex-basis: 20%;
+                    flex-basis: 33%;
 
                     .nodes-item-header {
                         display: flex;
-                        align-items: center;
 
                         .node-label {
                             background-color: var(--node-color);
@@ -363,7 +365,7 @@
                         .details-item {
                             display: flex;
                             flex-wrap: wrap;
-                            align-items: center;
+                            flex-direction: column;
                             font-size: 12px;
                             margin: 0 -@gutter-xs/2;
                             margin-top: @gutter-xxs/2;
